--- a/apps/syntax/package.json
+++ b/apps/syntax/package.json
@@ -16,7 +16,8 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.143",
     "@swc/helpers": "^0.3.3",
-    "@swc/jest": "^0.2.17"
+    "@swc/jest": "^0.2.17",
+    "next-seo": "^5.3.0"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
