--- a/apps/syntax/package.json
+++ b/apps/syntax/package.json
@@ -1,11 +1,12 @@
 {
   "name": "crontab-sentence",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "license": "MIT",
   "private": false,
   "files": [
-    "dist/*"
+    "dist/*",
+    "src/*"
   ],
   "scripts": {
     "build": "swc src -d dist",
