--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.4",
     "clsx": "^1.1.1",
-    "crontab-sentence": "^0.0.1",
+    "crontab-sentence": "0.0.2",
     "next": "^12.1.0",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
