--- a/apps/syntax/package.json
+++ b/apps/syntax/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "build": "swc src -d dist",
     "test": "jest",
-    "prepublish": "npm run test && npm run build"
+    "test:watch": "jest --watch",
+    "prepublish": "yarn copy:readme && yarn test && yarn build",
+    "copy:readme": "cp -rf ../../README.md README.md"
   },
   "dependencies": {
     "@swc/cli": "^0.1.55",
