build: improvements to swc

--- a/apps/syntax/.swcrc
+++ b/apps/syntax/.swcrc
@@ -10,7 +10,8 @@
 			"syntax": "typescript",
 			"tsx": false,
 			"decorators": true,
-			"dynamicImport": true
+			"dynamicImport": true,
+			"dts": true
 		}
 	}
 }
