--- a/apps/syntax/package.json
+++ b/apps/syntax/package.json
@@ -2,6 +2,7 @@
   "name": "crontab-sentence",
   "version": "0.0.2",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "private": false,
   "files": [
@@ -9,6 +10,8 @@
     "src/*"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
+    "postbuild": "tsc --emitDeclarationOnly --declarationDir dist",
     "build": "swc src -d dist",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,8 +22,7 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.143",
     "@swc/helpers": "^0.3.3",
-    "@swc/jest": "^0.2.17",
-    "next-seo": "^5.3.0"
+    "@swc/jest": "^0.2.17"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
