--- a/apps/syntax/tsconfig.json
+++ b/apps/syntax/tsconfig.json
@@ -1,7 +1,8 @@
 {
-	"exclude": ["node_modules", "src/dist"],
+	"exclude": ["node_modules", "dist"],
+	"include": ["src"],
 	"compilerOptions": {
-	  "outDir": "src/dist",
+	  "outDir": "dist",
 	  "target": "ES2015",
 	  "declaration": true,
 	  "resolveJsonModule": true,
