--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.1.1",
     "crontab-sentence": "0.0.2",
     "next": "^12.1.0",
+    "next-seo": "^5.3.0",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
