--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,21 +9,29 @@
     "build": "next build"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.4",
-    "classnames": "^2.3.1",
-    "clsx": "^1.1.1",
-    "crontab-sentence": "0.0.4",
-    "next": "^12.1.0",
-    "next-seo": "^5.3.0",
-    "postcss": "^8.4.12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-toast": "^2.2.0",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "crontab-sentence": "workspace:0.0.4",
+    "jotai": "^2.0.3",
+    "lucide-react": "^0.123.0",
+    "next": "^13.2.3",
+    "next-themes": "^0.2.1",
+    "openai": "^3.2.1",
+    "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-wrap-balancer": "^0.4.0",
+    "sonner": "^0.1.6",
+    "tailwind-variants": "^0.0.30",
+    "tailwindcss": "^3.2.7",
+    "ts-pattern": "^4.2.1",
+    "zod": "^3.21.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.22",
-    "@types/react": "^17.0.41",
-    "typescript": "^4.6.2"
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "typescript": "^4.9.5"
   }
 }
