--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.11",
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
