--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "pnpm run build --filter docs",
-    "dev": "turbo run dev --parallel",
-    "test": "turbo run test --parallel",
-    "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "prettier": "^2.8.4",
-    "turbo": "latest"
+    "prettier": "^2.8.4"
   }
 }
